force-app/main/default/objects/MUSW__Credential__c/MUSW__Credential__c.object-meta.xml
<CustomObject>
    <label>Credential</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>