force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Expiration_Date__c</fullName>
    <description>The date the Credential expires.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>