force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Issuing_Body__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Issuing_Body__c</fullName>
    <description>The issuing body that issued the credential.</description>
    <label>Issuing Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>