force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__License__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A related license in the system that this credential may belong to.</description>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>