force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Location__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Location__c</fullName>
    <description>The location of the issuing body that issued the credential</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>