force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Name__c</fullName>
    <description>The full name of the credential</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>