force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Reference_Number__c</fullName>
    <description>The reference number for the issued Credential.</description>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>