force-app/main/default/objects/MUSW__Credential__c/fields/MUSW__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Start_Date__c</fullName>
    <description>The date the user started working towards the credential.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>